# codesimilarity

./: README.md  pyproject.toml
codesimilarity/: __init__.py
tests/: test_codesimilarity.py
